<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:background="@drawable/logo_dme"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/telefono"
            style="@style/estilo_texto"/>

        <TextView
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/correo"
            style="@style/estilo_texto"/>

        <TextView
            android:id="@+id/sitio_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/web"
            style="@style/estilo_texto"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/direccion_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/direccion_nombre"
                style="@style/estilo_texto"/>

            <TextView
                android:id="@+id/direccion_contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion_contenido"
                style="@style/estilo_texto"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/giro_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/giro_nombre"
                style="@style/estilo_texto"/>

            <TextView
                android:id="@+id/giro_contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/giro_contenido"
                style="@style/estilo_texto"/>

        </LinearLayout>

        <TextView
            android:id="@+id/horario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/horario"
            style="@style/estilo_texto"/>

        <TextView
            android:id="@+id/texto_valoracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/valoracion"
            style="@style/estilo_texto"/>

        <RatingBar
            android:id="@+id/barra_estrellas"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:numStars="5"
            android:stepSize="1"
            android:rating="2"/>

        <Button
            android:id="@+id/boton_calificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton"/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>